客戶端調用服務端提交

--- a/etrading/pom.xml
+++ b/etrading/pom.xml
@@ -11,6 +11,7 @@
         <module>service.registry</module>
         <module>service.webservice</module>
         <module>service.gateway</module>
+        <module>service.common</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -27,5 +28,15 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>com.ccnu.etrading</groupId>
+                <artifactId>service.common</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
 </project>
