--- a/etrading/service.consumer/pom.xml
+++ b/etrading/service.consumer/pom.xml
@@ -39,6 +39,10 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-hystrix</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.ccnu.etrading</groupId>
+			<artifactId>service.common</artifactId>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
