--- a/etrading/service.provider/pom.xml
+++ b/etrading/service.provider/pom.xml
@@ -37,6 +37,10 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.21</version>
         </dependency>
+        <dependency>
+            <groupId>com.ccnu.etrading</groupId>
+            <artifactId>service.common</artifactId>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
